--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div>
+    <div class="banner">
+        <div>
+        <h1 class="title">Paola Frann Photography</h1>
+        <p><span id="banner-typed-text"></span></p>
+        <%= link_to "Book now", "#", class: "btn-banner"%>
+        </div>
+        
+        <div id="carouselExampleSlidesOnly" class="carousel slide image-div" data-interval=4000 data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img class="d-block w-100" src="https://picsum.photos/id/1027/500/300" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                <img class="d-block w-100" src="https://picsum.photos/id/1083/500/300" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                <img class="d-block w-100" src="https://picsum.photos/id/1066/500/300" alt="Third slide">
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+
+
+
+</div>
+
+
