--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,11 @@
         <div>
         <h1 class="title">Paola Frann Photography</h1>
         <p><span id="banner-typed-text"></span></p>
+        <div>
+        <br>
+        <br>
         <%= link_to "Book now", "#", class: "btn-banner"%>
+        </div>
         </div>
         
         <div id="carouselExampleSlidesOnly" class="carousel slide image-div" data-interval=4000 data-ride="carousel">
@@ -21,10 +25,12 @@
         </div>
         
     </div>
-
-
-
-
+    <div class="footer">
+            <ul>
+                <a href="#" ><li><i class="fab fa-instagram"></i> /PaolaFrann</li></a>
+                <a href="#" ><li><i class="fab fa-facebook-square"></i> /PaolaFrann</li></a>
+             </ul>
+        </div>
 </div>
 
 
