--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -12,3 +12,18 @@
         background-color: rgba(189, 102, 88, .71);
     }
 }
+
+.btn-book-show {
+    background-color:$musgreen;
+    padding: 15px 45px;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    margin: 30px 0;
+
+    &:hover {
+        color:white;
+        text-decoration: none;
+        background-color: rgba(255,255,255, 0.3);
+    }
+}
