--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -15,7 +15,7 @@
     font-size: 24px;
     font-weight: bold;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     a {
         color:rgba(255,255,255, 0);
@@ -28,6 +28,7 @@
         transition: ease-in-out .2s;
         a {
             color: white;
+            font-size: 18px;
         }
     }
   }
