--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -27,3 +27,10 @@
         background-color: rgba(255,255,255, 0.3);
     }
 }
+
+.btn-booking-form {
+    background-color: rgb(109,191,184);
+    padding: 5px 45px;
+    border-radius: 10px;
+    width:50%;
+}
