--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -32,3 +32,58 @@
         }
     }
   }
+
+  // payment show card
+  .card-product {
+    overflow: hidden;
+    height: 120px;
+    background: white;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    width: 70%;
+    border-radius:5px;
+    margin: 20px auto;
+  }
+  
+  .card-product img {
+    height: 100%;
+    width: 120px;
+    object-fit: cover;
+  }
+  
+  .card-product h2 {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .card-product p {
+    font-size: 20px;
+    line-height: 1.4;
+    opacity: .7;
+    margin-bottom: 0;
+    margin-top: 8px;
+  }
+  .card-product-infos {
+      display: flex;
+      justify-content: space-evenly;
+      width: 100%;
+  }
+  .card-product .card-product-infos {
+    padding: 16px;
+  }
+
+  .tax-details {
+      display: flex;
+      justify-content:space-between;
+  }
+  .tax-infos {
+    background: white;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      width: 30%;
+      margin: 0 auto;
+      border: 1px solid gray;
+      padding: 20px;
+      border-radius: 10px;
+  }
