--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -34,3 +34,11 @@
     border-radius: 10px;
     width:50%;
 }
+
+.btn-booking-payment {
+    margin-top: 20px;
+    background-color: rgb(109,191,184);
+    padding: 5px 45px;
+    border-radius: 10px;
+    width: 100%;
+}
