--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,21 +1,31 @@
-<div class="container">
-  <div class="row py-4">
-    <div class="col-md-3"><img class="d-block w-100" src="https://picsum.photos/id/1027/500/300" alt="Book"></div>
-    <div class="col">
-      <h1>Checkout summary</h1>
-      <p>Purchase of <strong><%= @order.book.name %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
-      <button id="pay" class="btn btn-primary">Pay</button>
-      
-      <script src="https://js.stripe.com/v3/"></script>
-      <script>
-        const paymentButton = document.getElementById('pay');
-        paymentButton.addEventListener('click', () => {
-          const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
-          stripe.redirectToCheckout({
-            sessionId: '<%= @order.checkout_session_id %>'
-          });
-        });
-      </script>
+<div class="payment-new">
+  <div class="container">
+    <h1 class="text-center">Checkout summary</h1>
+    <div class="card-product">
+      <img src="https://picsum.photos/id/1027/500/300" alt="Book">
+      <div class="card-product-infos">
+        <div class="infos"><p><strong><%= @order.book.name %> Session</strong></p></div>
+        <div class="infos"><p>Session date: <strong><%= DateTime.parse(@order.booking_date).strftime("%d/%m/%Y") %></strong></p></div>
+      </div>
     </div>
+    <% before_tax =  @order.amount * 0.8 %>
+    <% tax =  @order.amount * 0.2 %>
+    <div class="tax-infos">
+      <div class="tax-details"><p>Product price: </p><p><%= humanized_money_with_symbol before_tax %></p></div>
+      <div class="tax-details"><p>Tax: </p><p><%= humanized_money_with_symbol tax %></p></div>
+      <div class="tax-details"><p>Total: </p><p><%= humanized_money_with_symbol @order.amount %></p></div>
+      <button id="pay" class="btn-booking-payment">Pay Now</button>
+    </div>
+
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+      const paymentButton = document.getElementById('pay');
+      paymentButton.addEventListener('click', () => {
+        const stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+        stripe.redirectToCheckout({
+          sessionId: '<%= @order.checkout_session_id %>'
+        });
+      });
+    </script>
   </div>
 </div>
