order.show part one done

--- a/app/assets/stylesheets/components/_bodies.scss
+++ b/app/assets/stylesheets/components/_bodies.scss
@@ -1,4 +1,4 @@
-.book-index, .book-show, .payment-new {
+.book-index, .book-show, .payment-new, .orders-show {
     min-height:100vh;
     padding-top: 100px;
     h1 {
