--- a/app/views/studios/index.html.erb
+++ b/app/views/studios/index.html.erb
@@ -1,5 +1,10 @@
-<div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+<div class="studio-index">
+    <div class="container">
+        <h1 class="text-center">Find a studio near you</h1>
+        <div id="map"
+            style="width: 100%; height: 600px;"
+            data-markers="<%= @markers.to_json %>"
+            data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
+    </div>
 </div>
