--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -87,3 +87,32 @@
       padding: 20px;
       border-radius: 10px;
   }
+
+  .link-books {
+    color: black;
+    text-decoration: none;
+     &:hover {
+      color: black;
+      text-decoration: none;
+     }
+  }
+  .card-studio {
+    margin-top: 30px;
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    align-items: center;
+    &:hover {
+      background-color: rgba(0,0,0,0.05);
+    }
+    i {
+      font-size: 40px;
+      color: rgba(0,0,0,0.4);
+    }
+  }
+
+  .card-studio-content {
+    padding: 0 20px;
+  }
