create cloudnary and implemented Studio photos

--- a/app/assets/stylesheets/components/_bodies.scss
+++ b/app/assets/stylesheets/components/_bodies.scss
@@ -1,4 +1,4 @@
-.book-index, .book-show, .payment-new, .orders-show, .studio-index {
+.book-index, .book-show, .payment-new, .orders-show, .studio-index, .studio-new {
     min-height:100vh;
     padding-top: 100px;
     h1 {
