--- a/app/views/studios/_info_window.html.erb
+++ b/app/views/studios/_info_window.html.erb
@@ -1,3 +1,3 @@
-<%= image_tag("placeholder.jpeg", width: "100%", alt: "Edit Entry") %>
+<%= cl_image_tag studio.photo.key, height: 150, width: 200, crop: :scale %>
 <h2><%= studio.name %></h2>
 <p><%= studio.address %></p>
