--- a/app/views/studios/index.html.erb
+++ b/app/views/studios/index.html.erb
@@ -14,7 +14,7 @@
             
                 <% if @studio.nil? %>
                     <% elsif  @studio.size == 0 %>
-                    <h3>Sorry, There is no studios near you. Check on the map ours studios locations</h3>
+                    <p class="mt-3">Sorry, There is no studios near you. Check on the map ours studios locations.</p>
                     <% else %>
                 <% @studio.each do |studio| %>
                     <%= link_to books_path, class: "link-books" do %>
