book classes photos created with cloudnary and book/show images grid fixed

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
         <h1 class="book-title">Photo Sessions</h1>
         <div class="cards">
             <% @books.each do |book| %>
-                <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://picsum.photos/id/1027/500/300)">
+                <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= image_path book.sku %>')">
                     <div>    
                         <h2><%= book.name %></h2>
                         <%= link_to "See more", book_path(book) %>
