--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
         <div>
         <br>
         <br>
-        <%= link_to "Discover more", books_path, class: "btn-banner"%>
+        <%= link_to "Find a Studio", studios_path, class: "btn-banner"%>
         </div>
         </div>
         
