--- a/app/assets/stylesheets/components/_bodies.scss
+++ b/app/assets/stylesheets/components/_bodies.scss
@@ -1,4 +1,4 @@
-.book-index, .book-show, .payment-new, .orders-show, .studio-index, .studio-new {
+.book-index, .book-show, .payment-new, .orders-show, .studio-index, .studio-new, .book-new {
     min-height:100vh;
     padding-top: 100px;
     h1 {
@@ -34,10 +34,37 @@
 .book-title, .show-title {
     text-align: center;
 }
-.main-img, .small-images  {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
+ .small-images  {
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px;
+   grid-template-rows: repeat(2, 1fr);
+   img {
+      width: 100%;
+      object-fit: cover;
+   }
+   overflow:hidden;
+}
+
+.photo-0 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+.photo-1 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+.photo-2 {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+.photo-3 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+.photo-4 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
 }
 
 .main-body{
